--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,3 @@
-
-        button,
-        div,
-        form,
-        input {
-            margin: 10px;
-        }
-/****************************************************************************
- ****************************************************************************
-    
-    Default stylesheet
-    
-*****************************************************************************
-*****************************************************************************/
 :root {
     /* Define color scheme */
     --color-background    : #f0f2f0;
@@ -23,6 +9,17 @@
     --color-text-highlight: #ff6600;
 }
 
+button,
+div,
+form,
+input {
+    margin: 10px;
+}
+
+/* .topic-form{
+    border-block-width: 40px;
+} */
+
 body, input {
     background-color: var(--color-background);
     color           : var(--color-text);
@@ -31,9 +28,9 @@ body, input {
 }
 
 .container {
-    width  : 840px;
-    margin : auto;
-    padding: 2.5% 0;
+    width  : 1020px;
+    /* margin : auto; */
+    /* padding: 2.5% 0; */
 }
 
 .clearfix::after {
@@ -43,7 +40,8 @@ body, input {
 }
 
 h1 {
-    color        : var(--color-dark-blue);
+    /* color        : var(--color-dark-blue); */
+    color: rgba(233, 71, 111, 0.897);
     font-family  : "Montserrat Subrayada", sans-serif;
     font-size    : 4.2em;
     font-weight  : bold;
@@ -58,15 +56,13 @@ h2 {
     color         : var(--color-text-highlight);
     font-size     : 1.8em;
     font-weight   : bold;
-    letter-spacing: 0.04em;
-    
+    letter-spacing: 0.04em;  
     margin-bottom : 1em;
 }
 
 p {
     letter-spacing: 0.03em;
-    line-height   : 1.5em;
-    
+    line-height   : 1.5em;   
     margin-bottom : 3%;
 }
 
@@ -75,14 +71,14 @@ input {
     font-size       : 1.2em;
 
     display         : block;
-    width           : 96%;
-    margin-bottom   : 8%;
+    width           : 85%;
+    margin-bottom   : 0%;
     padding         : 3% 2%;
 }
 
 #leftPane {
     float: left;
-    width: 60%;
+    width: 20%;
 }
 
 #rightPane {
@@ -135,7 +131,7 @@ input {
     margin-right: 0;
 }
 
-.image_container img {
+.image_container {
     width: 100%;
 }
 
@@ -177,6 +173,7 @@ input {
 
     body {
         font-size: 2.6vw;
+        width: 100%;
     }
 
     #leftPane {
@@ -194,10 +191,12 @@ input {
 
     .image_container img {
         height: 24vw;
+        vertical-align: middle;
+        max-width: 100%;
+        max-height: 100%;
     }
 }
 
-.topic{
-    width:2%;
-    height: 2%;
+.topics-view{
+    width: 1020px
 }
